<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EventExpress</string>
    <string name="lbl_Password">Password</string>
    <string name="lbl_Login">LOGIN</string>
    <string name="lbl_UserID">UserID</string>
    <string name="lbl_NewUser">Sign up</string>
    <string name="lbl_Friends_List">Friends List</string>
    <string name="lbl_Events">Events</string>
    <string name="lbl_Event_Invitations">Event Invitations</string>
    <string name="lbl_My_Created_Events">My Created Events</string>
    <string name="lbl_Events_in_my_area">Events in my Area</string>
    <string name="lbl_Events_I_am_Attending">Events I am Attending</string>
    <string name="lbl_Create_Event">Create Event</string>
    <string name="lbl_Enter_a_Name">Enter a Name</string>
    <string name="lbl_Explain_Name">This will be a name others see you by.</string>
    <string name="lbl_Enter_Email_Addr">Enter your Email Address</string>
    <string name="lbl_Register">Register</string>
    <string name="lbl_Remember_Me">Remember Me</string>
    <string name="lbl_Friend_Requests">Friend Requests</string>

    <string name="welcome_message">Welcome to EventExpress!</string>

    <!-- strings for create_event -->
    <string name="lbl_Title">Title:</string>
    <string name="lbl_Description">Description:</string>
    <string name="lbl_Date">Date:</string>
    <string name="lbl_Time">Time:</string>
    <string name="lbl_Location">Location:</string>
    <string name="lbl_Pick_Date">Pick Date</string>

    <!-- strings for event_detail -->
    <string name="lbl_Event_Title">Event Title</string>
    <string name="btn_Accept">Accept</string>
    <string name="btn_Decline">Decline</string>
    <string name="btn_cancel">Cancel Event</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_Delete">Delete Event From List</string>


    <string name ="lbl_Edit_Event">Edit Event</string>
    <string name = "btn_save">Save</string>
    <!-- strings for event_myevents -->
    <string name="lbl_My_Events">My Events</string>


    <!-- strings for FriendsList -->
    <string name="btn_add">Add</string>
    <string name="btn_viewRequests">Requests</string>



    <!-- google+ login -->
    <string name="activity_name_G_login">G+ Login</string>
    <string name="action_settings">Settings</string>

    <!-- Button text -->
    <string name="btn_logout_from_google">Logout from Google</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="btn_create">Create</string>
    <string name="btn_invite">Invite Friends</string>
    <string name="eventTitleHint">Event name</string>

    <!-- Google Developer's Console -->
    <string name="android_client_id">266877390111-9i036usv19d8q1obfgjvqe6qres6ar3s.apps.googleusercontent.com</string>
    <string name="refresh_action">Refresh</string>

</resources>