<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Events_I_am_Attending"
            android:id="@+id/button"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:onClick="eventsAttending"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Event_Invitations"
            android:id="@+id/button2"
            android:layout_below="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:onClick="eventsInvites"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Events_in_my_area"
            android:id="@+id/button3"
            android:layout_below="@+id/button2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:onClick="eventsArea"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_My_Created_Events"
            android:id="@+id/button4"
            android:layout_below="@+id/button3"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:onClick="createdEvents"/>
</RelativeLayout>