<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            style = "@style/TitleFont.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Create_Event"
            android:id="@+id/textView_eventsHosting"
            android:layout_marginLeft="23dp"
            android:layout_alignParentTop="true" android:layout_alignParentLeft="true" android:layout_marginTop="23dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Title"
            android:id="@+id/textView_eventTitle"
            android:layout_below="@+id/textView_eventsHosting" android:layout_alignLeft="@+id/editText_title"
            android:layout_marginTop="27dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_title"
            android:layout_below="@+id/textView_eventTitle" android:layout_alignLeft="@+id/textView_eventsHosting"
            android:layout_alignParentRight="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_Description"
        android:id="@+id/textView_description"
        android:layout_below="@+id/editText_title"
        android:layout_alignLeft="@+id/editText_eventDescription"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:id="@+id/editText_eventDescription"
            android:layout_below="@+id/textView_description" android:layout_alignLeft="@+id/editText_title"
            android:layout_alignParentRight="true" android:layout_above="@+id/textView_location"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Date"
            android:id="@+id/textView_date"
            android:layout_below="@+id/editText_location" android:layout_alignRight="@+id/textView_time"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"
            android:ems="10"
            android:id="@+id/editText_date"
            android:layout_below="@+id/textView_date" android:layout_alignLeft="@+id/editText_eventDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Time"
            android:id="@+id/textView_time"
            android:layout_below="@+id/editText_date" android:layout_alignLeft="@+id/editText_eventDescription"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:focusable="false"
            android:ems="10"
            android:id="@+id/editText_time"
            android:layout_below="@+id/textView_time" android:layout_alignLeft="@+id/editText_eventDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Location"
            android:id="@+id/textView_location" android:layout_centerVertical="true"
            android:layout_alignLeft="@+id/editText_eventDescription"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/editText_location" android:layout_below="@+id/textView_location"
            android:layout_alignLeft="@+id/textView_location"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:id="@+id/button_create"
            android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/editText_time"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_invite"
            android:id="@+id/button_inviteFriends"
            android:layout_alignParentBottom="true" android:layout_toRightOf="@+id/textView_time"/>
</LinearLayout>
</ScrollView>