<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="match_parent">


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/lbl_Login"
            android:id="@+id/textView5"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_UserID"
            android:id="@+id/textView6"
            android:layout_below="@+id/textView5"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="57dp"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:ems="10"
            android:id="@+id/editText_time"
            android:layout_below="@+id/textView6"
            android:layout_alignParentLeft="true"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lbl_Password"
            android:id="@+id/textView7"
            android:layout_marginTop="37dp"
            android:layout_below="@+id/editText_time"
            android:layout_alignParentLeft="true"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/editText5"
            android:layout_below="@+id/textView7"
            android:layout_alignParentLeft="true"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Login"
            android:id="@+id/button"
            android:layout_below="@+id/editText5"
            android:layout_marginTop="61dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:onClick="login"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_NewUser"
            android:id="@+id/button2"
            android:layout_below="@+id/button"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="59dp"
            android:onClick="newUser"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google Login"
            android:id="@+id/button_googleLogin"
            android:onClick="googleLoginActivity"
            android:layout_below="@+id/editText5" android:layout_alignParentLeft="true"/>
</RelativeLayout>

